# nextasks

./: .env.template  .gitignore  bot.py  caldav_client.py  pyproject.toml  run.sh
docs/: PROBLEM.md  ROADMAP.md  SETUP.md
