[project]
name = "nextasks"
version = "0.1.0"
description = "Discord bot for managing Nextcloud Tasks via CalDAV"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py==2.3.2",
    "caldav==1.3.9",
    "python-dotenv==1.0.0",
    "python-dateutil==2.8.2",
    "icalendar==5.0.11",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]